--- a/Assets/ROS/baxter_unity/CMakeLists.txt
+++ b/Assets/ROS/baxter_unity/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(baxter_unity_test)
+project(baxter_unity)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
