--- a/Assets/ROS/baxter_unity/CMakeLists.txt
+++ b/Assets/ROS/baxter_unity/CMakeLists.txt
@@ -33,6 +33,7 @@ catkin_install_python(PROGRAMS
   scripts/motion_planner.py
   scripts/plan_manager.py
   scripts/joint_states_service.py
+  scripts/data_saver.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
